# Jasmin

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  interface.h  jasmin.h  menu.toml  menu_theme.toml
config/: basic.json  cube.mtl  debug.json  menu.toml  perph_mouse.json  tempo.json  tempo_menu.json  tempo_menu.toml  tempo_theme.json  villa_character.json  villa_room.json
config/maze/: itemSet.toml  roomSet.toml
config/tempo/: basic.toml  menu_pages.toml
doc/: CODE_STYLE.md  Linux.md  Windows.md  anchor.pixil  macOS.md  rect.pptx
include/: README.md
include/jasmin/: basic.h  inner.h  jasmin.h  lopo.h  lotri.h  outer.h  tempo.h
menu/: menu_pages.toml  pages.toml  theme.toml
modules/basic/setting/: setting.h
modules/lo_tri/: interface.h
modules/lo_tri/camera/: camera.h
modules/lo_tri/math/: interface.h
modules/lo_tri/pipline/: pipline.h
modules/lo_tri/zbuffer/: zbuffer.h
modules/tempo/: tempo.h
modules/tempo/page/: page.c
res/character/: test_bw.json  test_ot.json
res/model/: material.mtl  test_mtl_1.mtl  test_mtl_2.mtl
res/model/character_bw/: material.mtl
res/model/character_ot/: material.mtl
res/model/cube/: cube.mtl  material.mtl
res/model/root_room/: material.mtl  root_room.mtl
res/room/: root_room.json
src/: README.md  basic.h  debug.h  device.h  interface.h  jasmin.h  main.c  menu.h  menu_pages.toml  menu_theme.toml
src/basic/: README.md  _basic.h  atv.c  atv.h  basic.c  basic.h  delay.c  delay.h  env.c  env.h  font.c  font.h  func.c  func.h  func_sdl.c  interface.h  matrix.c  matrix.h  setting.c  setting.h  sort.c  sort.h  table.c  table.h  trig.c  trig.h  trigger.h
src/basic/debug/: debug.c
src/basic/setting/: setting.c
src/chess/: board.c  board.h  chess.c  chess.h  message.h  piece.c  piece.h
src/debug/: README.md  debug.c  debug.h
src/device/: README.md  _device.h  device.c  device.h  keyboard.c  keyboard.h  mouse.c
src/i_eng/: i_eng.c  i_eng.h
src/inner/: README.md  _inner.h  inner.h
src/inner/basic/: README.md  _basic.h  basic.h  ease.c  ease.h  env.c  env.h  func.c  func.h  interface.h  matrix.h  setting.c  setting.h  table.c  table.h  trigger.c  trigger.h
src/inner/debug/: debug.c  debug.h
src/inner/delay/: delay.h
src/inner/device/: device.c  device.h  keyboard.c  keyboard.h  mouse.c  mouse.h
src/inner/env/: env.h
src/intel/: action.c  action.h  entity.c  entity.h  intel.c  intel.h  intel_arr.c  intel_arr.h  intel_net.c  intel_net.h  intel_set.c  intel_set.h  net.c  net.h  set.c  set.h
src/jasmin/: README.md  basic.h  debug.h  device.h  interface.h  jasmin.h  tessst.c
src/jasmin/basic/: README.md  interface.h
src/jasmin/lo_tri/: README.md  interface.h  lo_tri.h  lopo.c  test.c
src/jasmin/lopo/: interface.h  lopo.c  lopo.h
src/lo_tri/: lo_tri.h
src/lotri/: LOTRI_Model.c  README.md  _lotri.h  buffer.c  buffer.h  camera.c  camera.h  lotri.c  lotri.h  model.c  model.h  mw.c  mw.h  world.c  world.h
src/maze/: interface.h  maze.c  maze.h
src/maze_inner/: README.md  maze_inner.c  maze_inner.h
src/maze_outer/: maze_outer.c
src/outer/: interface.h  outer.h
src/perph/: README.md  _perph.h  board.c  board.h  keyboard.c  keyboard.h  mouse.c  mouse.h  perph.c  perph.h
src/tempo/: README.md  elem.c  elem.h  menu.c  menu.h  page.c  page.h  tempo.c  tempo.h  theme.c  theme.h  type.c  type.h
src/villa/: README.md  character.c  character.h  message.c  message.h  room.c  room.h  villa.c  villa.h  weather.c  weather.h
test/: README.md  env.c  main.c  tempo.c  tempo_interface.c
tests/: README.md  main.c  tempo_interface.c
tests/maze_inner/: README.md  interface.h
tests/maze_outer/: interface.h  maze_outer.h
(+233 files in other folders)
